# Hestial

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  Strategy
.github/workflows/: cmake.yml  codeql.yml  msvc.yml
Documentation/: README.md
Documentation/Tech/: coding_rules.md  roadmap.md
app/Hesti-core/: CMakeLists.txt
app/Hesti-core/Include/log/: logger.h
app/Hesti-core/Src/Log/: logger.cpp
app/Hesti-core/Src/Network/: udpsocket.cpp
app/Hesti-garden/: CMakeLists.txt
app/Hesti-garden/Documentation/: README.md
app/Hesti-garden/src/: commandsparser.cpp  logger.cpp
app/Hesti-garden/tests/: CMakeLists.txt  commands_test.cpp
app/Hesti-home/src/: version.h
app/Homebase/: CMakeLists.txt
app/Homegarden/: CMakeLists.txt
app/Homegarden/Documentation/: Overview.md  Overview.md2
app/Homegarden/src/: CMakeLists.txt  commands.cpp  commands.h  commandsparser.h  logger.cpp  logger.h  main.cpp  socket.h  tcpsocket.cpp  tcpsocket.h  udpsocket.cpp  udpsocket.h
app/Homegarden/tests/: CMakeLists.txt  commands_test.cpp
housebot/: init.cpp  init.hpp  main.cpp
housebot.xcodeproj/: project.pbxproj
housebot.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
housebot.xcodeproj/project.xcworkspace/xcuserdata/romain.xcuserdatad/: UserInterfaceState.xcuserstate
housebot.xcodeproj/xcuserdata/romain.xcuserdatad/xcschemes/: xcschememanagement.plist
housebot/Applications/: garden.cpp  garden.hpp
src/Homebase/: CMakeLists.txt
src/Homegarden/: CMakeLists.txt  main.cpp
